--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
        minimum-scale=1, width=device-width, height=device-height">
     
   </head>
+  <body>
     <h1>Domain pages</h1>
     <br>
     <h2>If you've been redirected here please reach out to Glovskywebsites@gmail.com for more information and additional domains</h2>
