--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Domain pages</h1>
     <br>
-    <h2>If you've been redirected here please reach out to Glovskywebsites@gmail.com for more information and additional domains</h2>
+    <h2>If you've been redirected here please reach out to Glovskywebsites@gmail.com for information on purchasing or additional domains</h2>
 
   </body>
 </html>
