--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Glovsky Websites</title>
+<title>Glovsky Domains</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="./css/style.css" type="text/css" rel="stylesheet">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
@@ -19,12 +19,12 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Mail
+    Logo
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Domains</h1>
+    <h1 class="w3-jumbo w3-animate-top">Domain Sales</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">If you've been redirected here please reach out to Glovskywebsites@gmail.com for information on purchasing or additional domainst</p>
+    <p class="w3-large w3-center">Please reach out to Glovskydomains@gmail.com</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
   </div>
@@ -32,4 +32,3 @@ body, html {height: 100%}
 
 </body>
 </html>
-
