--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-top">Domain Sales</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">Please reach out to Glovskydomains@gmail.com</p>
-    <p class="w3-large w3-center" href="mailto:glovskydomains@gmail.com">Email Me</p> 
+    <a class="w3-large w3-center" href="mailto:glovskydomains@gmail.com">Email Me</a> 
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
   </div>
