--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ body, html {height: 100%}
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
+  <div class="w3-display-topleft w3-padding-large w3-xlarge" href="mailto:glovskydomains@gmail.com">
+    Email Me
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Domain Sales</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">Please reach out to Glovskydomains@gmail.com</p>
-    <a class="w3-large w3-center" href="mailto:glovskydomains@gmail.com">Email Me</a> 
+   
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
   </div>
