--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Glovsky Domains</title>
+<title>Glovsky Websites</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,7 +21,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Domain Sales</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Please reach out to Glovskydomains@gmail.com</p>
+    <p class="w3-large w3-center">Please reach out to Glovskywebsites@gmail.com</p>
    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
